<resources>
    <string name="app_name">图书馆选座</string>

    <!-- Strings related to login -->
    <string name="prompt_email">学号</string>
    <string name="prompt_password">密码(校园卡查询密码）</string>
    <string name="action_sign_in">登 陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">学号不存在请确认后重新输入</string>
    <string name="error_invalid_password">密码太短请重新输入</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"请先填入学号."
    </string>
    <!-- Strings related to readingRoom -->
    <string name="readingroom_no_1">综合阅览室一</string>
    <string name="readingroom_no_2">综合阅览室二</string>
    <string name="readingroom_no_3">综合阅览室三</string>
    <string name="readingroom_no_4">综合阅览室四</string>
    <string name="readingroom_no_5">综合阅览室五</string>
    <string name="readingroom_no_6">综合阅览室六</string>
</resources>
