<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBkg"
    android:orientation="vertical"
    tools:context="com.example.asus.libraryseatselecting.ReadingRoomActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/imageView3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="15dp"
            android:onClick="clickName"
            app:srcCompat="@drawable/userlogo" />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:id="@+id/welcomeText"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="22dp"
            android:textColor="#ffffff"
            android:ems="10"
            android:onClick="clickName"
            android:inputType="textPersonName"
            android:editable="false"
            android:text="欢迎你" />


        <Button
            android:layout_marginLeft="100dp"
            android:layout_gravity="center_vertical"
            android:layout_width="22dp"
            android:layout_height="28dp"
            android:background="@drawable/map"
            android:onClick="locate"
            android:textSize="22dp"
            android:id="@+id/btnMap" />



        <Button
            android:text="注销"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:layout_gravity="center_vertical"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:background="#00ffffff"
            android:textColor="#fdfcfc"
            android:onClick="clickExit"
            android:textSize="22dp"
            android:id="@+id/btnExit" />


    </LinearLayout>


    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/readingroom_no_1"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:background="@color/colorRoom"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button1" />
            <Button
                android:text="@string/readingroom_no_2"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:layout_marginLeft="@dimen/room_separation"
                android:background="@color/colorRoom2"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/roomLine_separation"
            android:layout_height="wrap_content">

            <Button
                android:text="@string/readingroom_no_3"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:background="@color/colorRoom2"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button3" />
            <Button
                android:text="@string/readingroom_no_4"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:layout_marginLeft="@dimen/room_separation"
                android:background="@color/colorRoom"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button4" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/roomLine_separation"
            android:layout_height="wrap_content">
            <Button
                android:text="@string/readingroom_no_5"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:background="@color/colorRoom"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button5" />
            <Button
                android:text="@string/readingroom_no_6"
                android:layout_width="@dimen/room_width"
                android:layout_height="@dimen/room_height"
                android:layout_marginLeft="@dimen/room_separation"
                android:background="@color/colorRoom2"
                android:onClick="clickRoom"
                android:textSize="20dp"
                android:layout_below="@+id/email_login_form"
                android:layout_alignParentStart="true"
                android:id="@+id/button6" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
